# gradoptorch

./: .gitignore  LICENSE  README.md  gradoptorch_example.ipynb  pyproject.toml  setup.py
examples/: functional_example.py  module_example.py
gradoptorch/: __init__.py  gradoptorch.py  lstorch.py  module.py
