[tool.poetry]
name = "gradoptorch"
version = "0.1.0"
description = "Classical gradient based optimization in PyTorch"
authors = ["Kevin Course <kevin.course@mail.utoronto.ca>"]
license = "GNUv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
jaxtyping = "^0.2.23"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
